--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" type="text/css" href="order.css" />
+    <link rel="stylesheet" type="text/css" href="feedback.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
