--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" type="text/css" href="order.css" />
-    <link rel="stylesheet" type="text/css" href="feedback.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="order.css" />
+    <link rel="stylesheet" type="text/css" href="feedback.css" /> -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <meta
       name="description"
